refractoring codee