@@ -3,11 +3,10 @@ package com.qentelli.employeetrackingsystem.serviceimpl;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,7 +15,7 @@ import com.qentelli.employeetrackingsystem.entity.Sprint;
 import com.qentelli.employeetrackingsystem.entity.WeekRange;
 import com.qentelli.employeetrackingsystem.entity.WeeklySprintUpdate;
 import com.qentelli.employeetrackingsystem.entity.enums.EnableStatus;
-import com.qentelli.employeetrackingsystem.entity.enums.StatusFlag;
+import com.qentelli.employeetrackingsystem.entity.enums.Status;
 import com.qentelli.employeetrackingsystem.exception.ProjectNotFoundException;
 import com.qentelli.employeetrackingsystem.exception.WeekRangeNotFoundException;
 import com.qentelli.employeetrackingsystem.exception.WeeklySprintUpdateNotFoundException;
@@ -31,7 +30,10 @@ import lombok.RequiredArgsConstructor;
 @Service
 @RequiredArgsConstructor
 public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService {
-
+	
+	private static final String WEEKLY_SPRINT_UPDATE_NOT_FOUND = "WeeklySprintUpdate not found with ID: ";
+	private static final String PROJECT_NOT_FOUND = "Project not found with ID: ";
+	private static final String WEEK_RANGE_NOT_FOUND = "WeekRange not found with ID: ";
 	private final WeeklySprintUpdateRepository weeklySprintUpdateRepository;
 	private final ProjectRepository projectRepository;
 	private final WeekRangeRepository weekRangeRepository;
@@ -41,9 +43,9 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 	public WeeklySprintUpdateDto createUpdate(WeeklySprintUpdateDto dto) {
 		WeeklySprintUpdate update = new WeeklySprintUpdate();
 		Project project = projectRepository.findById(dto.getProjectId())
-				.orElseThrow(() -> new ProjectNotFoundException("Project not found with ID: " + dto.getProjectId()));
+				.orElseThrow(() -> new ProjectNotFoundException(PROJECT_NOT_FOUND + dto.getProjectId()));
 		WeekRange week = weekRangeRepository.findById(dto.getWeeekRangeId()).orElseThrow(
-				() -> new WeekRangeNotFoundException("WeekRange not found with ID: " + dto.getWeeekRangeId()));
+				() -> new WeekRangeNotFoundException(WEEK_RANGE_NOT_FOUND + dto.getWeeekRangeId()));
 		update.setProject(project);
 		update.setWeek(week);
 		update.setAssignedPoints(dto.getAssignedPoints());
@@ -67,7 +69,7 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 		update.setRiskStoryCounts(dto.getRiskStoryCounts());
 		update.setComments(dto.getComments());
 		update.setInjectionPercentage(dto.getInjectionPercentage());
-		update.setWeeklySprintUpdateStatus(StatusFlag.ACTIVE);
+		update.setWeeklySprintUpdateStatus(Status.ACTIVE);
 		update.setEnableStatus(EnableStatus.DISABLED);
 		WeeklySprintUpdate saved = weeklySprintUpdateRepository.save(update);
 		return convertToDto(saved);
@@ -77,11 +79,11 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 	@Transactional
 	public WeeklySprintUpdateDto updateUpdate(Integer id, WeeklySprintUpdateDto dto) {
 		WeeklySprintUpdate existing = weeklySprintUpdateRepository.findById(id)
-				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException("WeeklySprintUpdate not found with ID: " + id));
+				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException(WEEKLY_SPRINT_UPDATE_NOT_FOUND + id));
 		Project project = projectRepository.findById(dto.getProjectId())
-				.orElseThrow(() -> new ProjectNotFoundException("Project not found with ID: " + dto.getProjectId()));
+				.orElseThrow(() -> new ProjectNotFoundException(PROJECT_NOT_FOUND + dto.getProjectId()));
 		WeekRange week = weekRangeRepository.findById(dto.getWeeekRangeId())
-				.orElseThrow(() -> new WeekRangeNotFoundException("WeekRange not found with ID: " + dto.getWeeekRangeId()));
+				.orElseThrow(() -> new WeekRangeNotFoundException(WEEK_RANGE_NOT_FOUND + dto.getWeeekRangeId()));
 		existing.setAssignedPoints(dto.getAssignedPoints());
 		existing.setAssignedStoriesCount(dto.getAssignedStoriesCount());
 		existing.setInDevPoints(dto.getInDevPoints());
@@ -113,8 +115,8 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 	@Transactional
 	public void deleteUpdate(Integer id) {
 		WeeklySprintUpdate update = weeklySprintUpdateRepository.findById(id)
-				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException("WeeklySprintUpdate not found with ID: " + id));
-		update.setWeeklySprintUpdateStatus(StatusFlag.INACTIVE);
+				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException(WEEKLY_SPRINT_UPDATE_NOT_FOUND + id));
+		update.setWeeklySprintUpdateStatus(Status.INACTIVE);
 		weeklySprintUpdateRepository.save(update);
 	}
 
@@ -122,7 +124,7 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 	@Transactional
 	public boolean setWeeklySprintUpdateEnabled(Integer weeklySprintUpdateId) {
 		WeeklySprintUpdate update = weeklySprintUpdateRepository.findById(weeklySprintUpdateId)
-				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException("WeeklySprintUpdate not found with id: " + weeklySprintUpdateId));
+				.orElseThrow(() -> new WeeklySprintUpdateNotFoundException(WEEKLY_SPRINT_UPDATE_NOT_FOUND + weeklySprintUpdateId));
 		update.setEnableStatus(EnableStatus.ENABLED);
 		weeklySprintUpdateRepository.save(update);
 		return true;
@@ -130,26 +132,26 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 
 	@Override
 	public Page<WeeklySprintUpdateDto> getAllUpdates(Pageable pageable) {
-		Page<WeeklySprintUpdate> updates = weeklySprintUpdateRepository.findByWeeklySprintUpdateStatus(StatusFlag.ACTIVE, pageable);
-		List<WeeklySprintUpdateDto> dtoList = updates.stream().map(this::convertToDto).collect(Collectors.toList());
+		Page<WeeklySprintUpdate> updates = weeklySprintUpdateRepository.findByWeeklySprintUpdateStatus(Status.ACTIVE, pageable);
+		List<WeeklySprintUpdateDto> dtoList = updates.stream().map(this::convertToDto).toList();
 		return new PageImpl<>(dtoList, pageable, updates.getTotalElements());
 	}
 
 	@Override
 	public List<WeeklySprintUpdateDto> getAllActiveUpdates() {
-		return weeklySprintUpdateRepository.findByWeeklySprintUpdateStatus(StatusFlag.ACTIVE)
+		return weeklySprintUpdateRepository.findByWeeklySprintUpdateStatus(Status.ACTIVE)
 				.stream().map(this::convertToDto).toList();
 	}
 
 	@Override
 	public List<WeeklySprintUpdateDto> getAllBySprintId(Long sprintId) {
-		return weeklySprintUpdateRepository.findBySprintIdAndStatusFlag(sprintId, StatusFlag.ACTIVE)
+		return weeklySprintUpdateRepository.findBySprintIdAndStatusFlag(sprintId, Status.ACTIVE)
 				.stream().map(this::convertToDto).toList();
 	}
 
 	@Override
 	public List<WeeklySprintUpdateDto> getActiveUpdatesByWeekId(int weekId) {
-		return weeklySprintUpdateRepository.findByWeekIdAndStatusFlag(weekId, StatusFlag.ACTIVE)
+		return weeklySprintUpdateRepository.findByWeekIdAndStatusFlag(weekId, Status.ACTIVE)
 				.stream().map(this::convertToDto).toList();
 	}
 
@@ -165,22 +167,19 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 		List<Integer> validWeekIds = weekRangeRepository.findValidHistoricalWeekIds(sprint.getSprintId(), currentWeekId);
 		if (validWeekIds.isEmpty()) return Collections.emptyList();
 
-		return weeklySprintUpdateRepository.findByWeekIdsAndStatusFlag(validWeekIds, StatusFlag.ACTIVE)
+		return weeklySprintUpdateRepository.findByWeekIdsAndStatusFlag(validWeekIds, Status.ACTIVE)
 				.stream().map(this::convertToDto).toList();
 	}
 
-	// -----------------------
-	// Entity to DTO converter
-	// -----------------------
 	private WeeklySprintUpdateDto convertToDto(WeeklySprintUpdate update) {
 	    WeeklySprintUpdateDto dto = new WeeklySprintUpdateDto();
 	    dto.setWeekSprintId(update.getWeekSprintId());
 	    dto.setProjectId(update.getProject().getProjectId());
-	    dto.setProjectName(update.getProject().getProjectName()); // ✅ Add this
+	    dto.setProjectName(update.getProject().getProjectName()); 
 	    dto.setWeeekRangeId(update.getWeek().getWeekId());    
 	    Sprint sprint = update.getWeek().getSprint();
 	    if (sprint != null) {
-	        dto.setSprintNumber(sprint.getSprintNumber()); // ✅ Add this
+	        dto.setSprintNumber(sprint.getSprintNumber()); 
 	    }
 	    dto.setAssignedPoints(update.getAssignedPoints());
 	    dto.setAssignedStoriesCount(update.getAssignedStoriesCount());
@@ -197,8 +196,8 @@ public class WeeklySprintUpdateServiceImpl implements WeeklySprintUpdateService 
 	    dto.setGroomingHealth(update.getGroomingHealth());
 	    dto.setDifficultCount1(update.getDifficultCount1());
 	    dto.setDifficultCount2(update.getDifficultCount2());
-	    dto.setEstimationHealthStatus(update.getEstimationHealthStatus()); // ✅ Add this
-	    dto.setGroomingHealthStatus(update.getGroomingHealthStatus());     // ✅ Add this
+	    dto.setEstimationHealthStatus(update.getEstimationHealthStatus()); 
+	    dto.setGroomingHealthStatus(update.getGroomingHealthStatus());     
 	    dto.setRiskPoints(update.getRiskPoints());
 	    dto.setRiskStoryCounts(update.getRiskStoryCounts());
 	    dto.setComments(update.getComments());
